# cookiecutter

./: .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml
.github/workflows/: build.yml
favicon/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml
favicon/.github/workflows/: build.yml  check-release.yml
favicon/src/: index.ts
favicon/src/__tests__/: favicon.spec.ts
favicon/ui-tests/: package.json
favicon/ui-tests/tests/: favicon.spec.ts
lib/: index.js
myextension/: .gitignore  LICENSE  MANIFEST.in  package.json
src/: index.ts
src/__tests__/: myfavicon.spec.ts
ui-tests/: package.json
ui-tests/tests/: myfavicon.spec.ts
